--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "prepublish": "tsc && jsdoc2md -f ./dist/*/*.js > docs/docs.md"
   },
   "devDependencies": {
+    "@types/node": "^22.13.10",
     "esbuild": "^0.15.9",
+    "jsdoc-to-markdown": "^9.1.1",
     "typescript": "^4.6.4"
   },
   "dependencies": {
